[gd_scene load_steps=15 format=3 uid="uid://dtb2c5gjiqgtm"]

[ext_resource type="Script" path="res://Camera.gd" id="1_lfgs5"]
[ext_resource type="PackedScene" uid="uid://fwi40qeh5qtj" path="res://Spawner.tscn" id="6_ecqcl"]
[ext_resource type="Script" path="res://InventoryMenu.gd" id="8_goxwj"]
[ext_resource type="PackedScene" uid="uid://dwlmkmkaoshe8" path="res://Catapult2.aseprite" id="8_j3ral"]
[ext_resource type="PackedScene" uid="uid://l0idm6n5uus2" path="res://Wall.tscn" id="8_uilxn"]
[ext_resource type="Texture2D" uid="uid://cnefhcarxh6l1" path="res://Farm.aseprite" id="10_4ut06"]
[ext_resource type="Texture2D" uid="uid://cyggi7lc1jf1f" path="res://Sky2.aseprite" id="10_7dku5"]
[ext_resource type="Script" path="res://Camera2D.gd" id="10_ho686"]
[ext_resource type="Script" path="res://Logic.gd" id="11_2bxst"]
[ext_resource type="Texture2D" uid="uid://bbmuor06wxlf3" path="res://icon.svg" id="11_yjx8b"]
[ext_resource type="Texture2D" uid="uid://bi5j63bbhl8r0" path="res://TileSetMaster.aseprite" id="12_hayg3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mfbr"]
size = Vector2(172, 636)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_63of7"]
texture = ExtResource("12_hayg3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_1w30g"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_63of7")

[node name="MainScene" type="Node2D"]
script = ExtResource("1_lfgs5")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Spawner" parent="." instance=ExtResource("6_ecqcl")]
position = Vector2(2014, 752)
scale = Vector2(1.04612, 1.46423)

[node name="Node2D2" parent="." instance=ExtResource("8_uilxn")]
position = Vector2(832, 659)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("10_ho686")

[node name="Sky2" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(2888, 545)
scale = Vector2(3, 3)
texture = ExtResource("10_7dku5")

[node name="Logic" type="Node2D" parent="."]
script = ExtResource("11_2bxst")

[node name="Inventory" type="Control" parent="Logic"]
visible = false
z_index = 1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_goxwj")

[node name="ScrollContainer" type="ScrollContainer" parent="Logic/Inventory"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 0
offset_left = 467.0
offset_top = 44.0
offset_right = 1467.0
offset_bottom = 1044.0

[node name="GridContainer" type="GridContainer" parent="Logic/Inventory/ScrollContainer"]
layout_mode = 2
columns = 8

[node name="Catapult2" parent="Logic" instance=ExtResource("8_j3ral")]
position = Vector2(77, -65)
scale = Vector2(3, 3)

[node name="Farm" type="Sprite2D" parent="Logic"]
position = Vector2(208, -50)
scale = Vector2(3, 3)
texture = ExtResource("10_4ut06")

[node name="Blender" type="Sprite2D" parent="Logic"]
position = Vector2(-134, 193)
texture = ExtResource("11_yjx8b")

[node name="Wall" type="Sprite2D" parent="Logic"]
position = Vector2(-146, 67)
texture = ExtResource("11_yjx8b")

[node name="TextEdit" type="TextEdit" parent="Logic"]
offset_left = 35.0
offset_top = 29.0
offset_right = 230.0
offset_bottom = 85.0
scale = Vector2(1.00949, 1)

[node name="BuildingUi" type="Control" parent="Logic"]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Logic/BuildingUi"]
layout_mode = 0
offset_left = 1741.0
offset_top = 81.0
offset_right = 1891.0
offset_bottom = 693.0

[node name="Catapult" type="Button" parent="Logic/BuildingUi/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Farm" type="Button" parent="Logic/BuildingUi/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Blender" type="Button" parent="Logic/BuildingUi/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Wall" type="Button" parent="Logic/BuildingUi/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Area2D" type="Area2D" parent="Logic/BuildingUi/VBoxContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Logic/BuildingUi/VBoxContainer/Area2D"]
position = Vector2(76, 308)
shape = SubResource("RectangleShape2D_0mfbr")

[node name="TextEdit2" type="TextEdit" parent="Logic"]
offset_left = 258.0
offset_top = 28.0
offset_right = 453.0
offset_bottom = 84.0
scale = Vector2(1.00949, 1)

[node name="TileMap" type="TileMap" parent="." groups=["ground"]]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_1w30g")
format = 2
layer_0/tile_data = PackedInt32Array(458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 65537, 0, 524298, 65537, 0, 524297, 131073, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589834, 131073, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0)

[connection signal="pressed" from="Logic/BuildingUi/VBoxContainer/Catapult" to="Logic" method="_on_catapult_pressed"]
[connection signal="pressed" from="Logic/BuildingUi/VBoxContainer/Farm" to="Logic" method="_on_farm_pressed"]
[connection signal="pressed" from="Logic/BuildingUi/VBoxContainer/Blender" to="Logic" method="_on_blender_pressed"]
[connection signal="pressed" from="Logic/BuildingUi/VBoxContainer/Wall" to="Logic" method="_on_wall_pressed"]
[connection signal="area_entered" from="Logic/BuildingUi/VBoxContainer/Area2D" to="Logic" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Logic/BuildingUi/VBoxContainer/Area2D" to="Logic" method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Logic/BuildingUi/VBoxContainer/Area2D" to="Logic" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Logic/BuildingUi/VBoxContainer/Area2D" to="Logic" method="_on_area_2d_mouse_exited"]
